[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "asana-uploader-mcp"
version = "0.1.0"
description = "Local MCP server that adds Asana file attachment support missing from the official remote MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
asana-uploader-mcp = "server:main_sync"
